# solar-system

./: .gitignore  1planet1sun  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Moon.cpp  Moon.h  OrbitalPhysics.cpp  OrbitalPhysics.h  Planet.cpp  Planet.h  PointLight.cpp  PointLight.h  README.md  SceneHandler.cpp  SceneHandler.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  SpotLight.cpp  SpotLight.h  Sun.cpp  Sun.h  Texture.cpp  Texture.h  Window.cpp  Window.h  a.out  default  error.txt  figureEight  (+5 more)
assets/materials/: planetMaterial.json
assets/models/: asteroid.mtl  x-wing.mtl
assets/shaders/: basicShader.frag  basicShader.vert  bloomShader.frag  bloomShader.vert  directional_shadow_map.frag  directional_shadow_map.vert  half.frag  half.vert  hdrShader.frag  hdrShader.vert  oldShader.frag  omni_shadow_map.frag  omni_shadow_map.geom  omni_shadow_map.vert  planetShader.frag  planetShaderNoShadows.frag  planetShaderNoShadows.vert  planetShaderShadows.frag  planetShaderShadows.vert  shader.vert  skybox.frag  skybox.vert  sunShader.frag  sunShader.vert
jsonScenes/: 1planet1sun.json  asteroidScene.json  blueSunScene.json  figureEight.json
notes/: camera_notes.txt  compileLine.txt  input_notes.txt  notes.txt  rotation_notes.txt
shaders/: planetShader.frag  shader.frag  shader.vert  sunShader.frag
src/: Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  MainShader.cpp  MainShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OmniShadowMap.cpp  OmniShadowMap.h  OrbitalPhysics.cpp  OrbitalPhysics.h  Planet.cpp  Planet.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  Shader.cpp  Shader.h  ShaderCreator.cpp  ShaderCreator.h  ShaderHandler.cpp  ShaderHandler.h  ShaderHelperFunctions.h  ShadowMap.cpp  ShadowMap.h  (+18 more)
src/cyCore/: cyTriMesh.h
